Change default view when opening up Obsidian

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -6,5 +6,8 @@
   "alwaysUpdateLinks": true,
   "newFileLocation": "folder",
   "newFileFolderPath": "Resources",
-  "useMarkdownLinks": true
+  "useMarkdownLinks": true,
+  "defaultViewMode": "preview",
+  "propertiesInDocument": "visible",
+  "tabSize": 2
 }
